Fixes to scaling on smaller resolutions, relinked book and contact buttons

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -590,10 +590,10 @@ input[type="number"] {
 
 #voyager-navbar-target {
     position: absolute;
-    top: -17.5px;
-    left: -15px;
-    width: 40px;
-    height: 40px;
+    top: 7.5px;
+    left: 7.5px;
+    width: 60px;
+    height: 60px;
     z-index: 10;
 }
 
@@ -601,11 +601,11 @@ input[type="number"] {
     position: relative;
     left: 0;
     top: 0;
-    width: 600px;
-    height: 600px;
+    width: 300px;
+    height: 300px;
     z-index: 4;
     pointer-events: none;
-            transform: translateY(180px);
+    transform: translateY(20px);
 }
 
 #voyager-navbar-mover.move {
@@ -922,6 +922,12 @@ input[type="number"] {
     text-align: center;
     text-wrap: nowrap;
     font: 48px "Code Font Bold";
+}
+
+@media (max-width: 1024px) {
+    .heading-line h2 {
+        font-size: 38px;
+    }
 }
 
 #footer {
@@ -1433,6 +1439,8 @@ input[type="number"] {
     left: 0;
     right: 0;
     margin: 0 auto;
+    width: 50px;
+    height: 50px;
     }
 
     .heading-line {
@@ -1577,12 +1585,12 @@ html.is-animating body {
 
 @media (min-width: 768px) {
     [scroll-transition="slide-left"]:not([scroll-transition-list]) {
-        --slide-offset: 400px;
+        --slide-offset: 325px;
         transform: translateX(var(--slide-offset));
     }
 
     [scroll-transition="slide-right"]:not([scroll-transition-list]) {
-        --slide-offset: -400px;
+        --slide-offset: -325px;
         transform: translateX(var(--slide-offset));
     }
 }
